...
    tools:context="warehouse.fh_muenster.de.warehouse.LoginActivity"
    android:scaleType="centerCrop"
    android:background="@mipmap/bg2">


    <EditText
        android:id="@+id/mitarbeiterNr_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/login_btn"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/loginActivity_personnelId"
        android:inputType="number" />


    <EditText
        android:id="@+id/password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mitarbeiterNr_txt"
        android:layout_gravity="center_vertical"
...
