<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg2">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="warehouse.fh_muenster.de.warehouse.StockAmendment">

        <EditText
            android:id="@+id/quantity_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/stockAmendment_text_addedQuantity"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/button_alter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:text="@string/stockAmendment_button_alter"
            style="?android:attr/borderlessButtonStyle"/>

        <TextView
            android:id="@+id/headline_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/stockAmendment_text_headline"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#454545" />

        <TextView
            android:id="@+id/lagerort_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/input_storageLocation"
            android:text="@string/stockAmendment_text_storageLocation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/menge_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lagerort_txt"
            android:layout_marginTop="10dp"
            android:text="@string/stockAmendment_text_quantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/input_storageLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:scrollHorizontally="false"
            android:singleLine="true"
            android:text="100000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="34dp"
            android:layout_marginEnd="34dp"
            android:layout_below="@+id/headline_txt"
            android:layout_alignRight="@+id/headline_txt"
            android:layout_alignEnd="@+id/headline_txt" />

        <TextView
            android:id="@+id/input_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:singleLine="true"
            android:text="100000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignBaseline="@+id/menge_txt"
            android:layout_alignBottom="@+id/menge_txt"
            android:layout_alignLeft="@+id/input_storageLocation"
            android:layout_alignStart="@+id/input_storageLocation" />

    </RelativeLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="300sp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffeeeeee" />

</android.support.v4.widget.DrawerLayout>