...

    <string name="drawer_open">Menü öffnen</string>
    <string name="drawer_close">Menü schließen</string>
    <string name="drawer_title">Zurück</string>
    <string name="drawer_commission">Meine Kommissionen</string>
    <string name="drawer_commission_overview">Offene Kommissionen</string>
    <string name="drawer_stock">Lagerbestände</string>
    <string name="drawer_logout">Logout</string>
    <string name="action_settings">Einstellungen</string>

    <string name="toast_logout">Logout</string>
    <string name="toast_exit">Bitte drücken Sie erneut die Zurück Taste um die App zu beenden</string>
    <string name="toast_commissionExitNotAllowed">Kommission kann nicht abgebrochen werden</string>
...
    <string name="toast_stockAmendment_success">Menge erfolgreich geändert</string>

    <string name="dialog_wait">Bitte warten</string>
    <string name="dialog_load">Daten werden geladen</string>
    <string name="dialog_article">Artikel werden geladen</string>

    <string name="dialog_box_question">Menge wirklich ändern?</string>
    <string name="dialog_box_ok">Bestätigen</string>
    <string name="dialog_box_cancel">Abbrechen</string>
</resources>

